# car-price-prediction

./: .gitignore  CarPricePrediction.ipynb  README.md  main.py  pyproject.toml
.ipynb_checkpoints/: CarPricePredictBlog-checkpoint.ipynb  CooperUnionCarPricePredict-checkpoint.ipynb
car_price/: categorical_data_strategy.py  feature_selection.py  missing_data_strategy.py
conf/: config.yaml
conf/experiment/: base.yaml  ramdom_forest_reg.yaml
ml/metrics/: metric_selection.py
ml/models/: lasso.py  model_selection.py  ridge.py
ml/models/regression/: ensemble_model_selection.py  linear_model_selection.py  model_selection.py
ml/strategies/: categorical_data_strategy.py  feature_selection.py  missing_data_strategy.py
notebooks/: CarPricePredictBlog.ipynb  CooperUnionCarPricePredict.ipynb
src/core/: feature_selection.py  metric_selection.py
src/core/strategies/: regularization_methods.py
src/models/regression/: ensemble_model_selection.py  linear_model_selection.py  model_selection.py  regularization.py
