[tool.poetry]
name = "car-price-prediction"
version = "0.1.0"
description = ""
authors = ["Bertan ULUSOY <bertan_ulusoy@yahoo.com>"]
readme = "README.md"
packages = [{include = "car_price_prediction"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
